Issue #3616, manually number upper-latin lists for alignment

--- a/css/refactor/themes/business/parts/eoc.less
+++ b/css/refactor/themes/business/parts/eoc.less
@@ -84,6 +84,18 @@ div.cnx-eoc {
     ol,
     ul {
       .scale-padding(1, padding-left);
+      &[type="A"] {
+        list-style-type: none;
+        li {
+          counter-increment: liTypeA;
+          &::before {
+            content: counter(liTypeA, upper-latin) ".";
+            position: relative;
+            width: 0;
+            left: -15.6px;
+          }
+        }
+      }
     }
   }
   &.key-terms {
